--- a/containers/timelinePage.html
+++ b/containers/timelinePage.html
@@ -14,14 +14,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/timelinePage.css" type="text/css">
     <link rel="stylesheet" href="../css/responsive.css" type="text/css">
-    <title>Sapce Race Timeline</title>
+    <title>Space Race Timeline</title>
     <style>
     </style>
 </head>
 
 <body>
     <section class="main">
-        <a href="../main.html" id="back" onmouseover="sound()">Back</a>
+        <a href="../index.html" id="back" onmouseover="sound()">Back</a>
         <a href="#sol" onmouseover="sound()">
             <img id="next-img" src="../static/next.png" />
         </a>
