--- a/containers/index.html
+++ b/containers/index.html
@@ -10,19 +10,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main">
-        <a href="../main.html" class="back" onmouseover="sound()">Back</a>
-        <a href="../containers/timelinePage.html" class="skip" onmouseover="sound()">Skip</a>
-    </div>
+    
     <div id="ChangeBG"></div>
     <div id="pauseBG"></div>
+    
+    <div class="main">
+        <a href="../index.html" class="back" onmouseover="sound()">Back</a>
+        <a href="../containers/timelinePage.html" class="skip" onmouseover="sound()">Landing</a>
+    </div>
     <div class="canvas-warp">
         <canvas width="1280" height="720" id="game-canvas"></canvas>
         <div id="quest">
-            <h1>Missions</h1>
-            <p>&emsp;&emsp;-Blueprints: <span id="QBP">0</span>/3</p>
-            <p>&emsp;&emsp;-Parts: <span id="QPART">0</span>/3</p>
+            <h1><span id="mission">Missions 1/2</span></h1>
+            <p>&emsp;&emsp;<span id="Quest-name">-Blueprints: </span><span id="QBP">0/3</span></p>
         </div>
+        <div id="controll" onclick="display()"></div>
     </div>
     <script src="js/index.js"></script>
     <script src="js/player.js"></script>
