--- a/containers/roleOfGame.html
+++ b/containers/roleOfGame.html
@@ -17,20 +17,22 @@
 </head>
 <body>
     <div class="main">
-        <a href="../main.html" class="back" onmouseover="sound()">Back</a>
+        <a href="../index.html" class="back" onmouseover="sound()">Back</a>
         <div class="block">
             <h1 class="title">Control</h1>
-            <img class="role-img" src="../static/3.png"/>
+            <img class="role-img-1" src="../static/3.1.png"/>
         </div>
         <div class="block">
             <h1 class="title">Play Off</h1>
             <img class="role-img" src="../static/1.png"/>
-            <p class="subTitle">ผู้เล่นต้องหาทางพาดอกเตอร์วานรซีซ่าขึ้นไปบนดวงจันทร์ซึ่งสามารถทำได้ 2 วิธี คือ หารหัสผ่านของประตูเพื่อเข้าไปขโมยจรวดจากศูนย์วิจัย หรือสร้างจรวดโดยเก็บชิ้นส่วนที่กระจัดกระจายอยู่ภายในศูนย์วิจัยมาประกอบเข้าด้วยกัน</p>
+            <p class="subTitle">ผู้เล่นต้องหาทางพาดอกเตอร์วานรซีซ่าขึ้นไปบนดวงจันทร์ โดยผู้เล่นจะต้องเก็บชิ้นส่วนของยานอวกาศที่กระจัดกระจายอยู่ภายในศูนย์วิจัยมาประกอบเข้าด้วยกัน ถ้าผู้เล่นสามารถพาดอกเตอร์วานรซีซ่าขึ้นไปบนดวงจันทร์ได้จะสามารถดูรายละเอียดของ Space Race ได้</p><br/>
+            <p class="subTitle">เมื่อต้องการปล่อยยานให้ผู้เล่นกดปุ่ม E ที่รูปภาพด้านล่างเพื่อปล่อยยาน</p>
+            <img class="role-img-3" src="../static/Screen Shot 2565-05-23 at 08.57.45.png"/>
         </div>
         <div class="block">
             <h1 class="title">Obstacle</h1>
             <img class="role-img-3" src="../static/2.png"/>
-            <p class="subTitle">อุปสรรคของเกมนี้คือ หากผู้เล่นถูกหมาโซเวียตตีพลังจะลดลง หากถูกตีจนพลังหมดหลอดผู้เล่นจะตายและเกมจะจบทันที เมื่อจบเกมผู้เล่นสามารถเริ่มเกมใหม่หรือดูรายละเอียดของ Space Race ได้</p>
+            <p class="subTitle">อุปสรรคของเกมนี้คือ หากผู้เล่นถูกหมาโซเวียตตีพลังจะลดลงหากถูกตีจนพลังหมดหลอดผู้เล่นจะตายและเกมจะจบทันทีเมื่อจบเกมผู้เล่นสามารถเริ่มเกมใหม่ได้</p>
         </div>
     </div>
 </body>
